infra/k8s-dev/products.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products-api
          image: trungdn2/node-k8s-products-service:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
