infra/k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-name: "node-k8s.dev"
spec:
  rules:
    - host: node-k8s.dev
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3001
          - path: /products
            backend:
              serviceName: products-service
              servicePort: 3002
          - path: /orders
            backend:
              serviceName: orders-service
              servicePort: 3003
